# Project-Creator-2

./: Cargo.toml  LICENSE  README.md
src/: argument_processing.rs  information.rs  main.rs
templates/latex/default/: main.tex
templates/latex/hmcmath/: main.tex
templates/python/default/src/: main.py
