[package]
name = "pjcr"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A simple tool for creating projects from templates."
readme = "README.md"
repository = "https://github.com/TheSharkhead2/Project_Creator_2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5"
serde_derive = "1.0"
serde = "1.0"
reqwest = {version = "0.11", features = ["blocking"]}
